--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "framer-motion": "^7.6.18",
+    "moment": "^2.29.4",
     "next": "13.0.5",
+    "qs": "^6.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.4",
+    "react-moment": "^1.1.2",
+    "react-slick": "^0.29.0",
+    "sass": "^1.56.1",
+    "slick-carousel": "^1.8.1"
   }
 }
